# dock-intro

./: Cargo.toml  PLAN.md  README.md
pallets/vanity-name/: Cargo.toml
pallets/vanity-name/src/: lib.rs  mock.rs  tests.rs
runtime/: Cargo.toml
runtime/src/: lib.rs
